test/e2e/istio/split-by-destrule-subsets/istio-rollout-destrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-rollout-destrule
spec:
  host: istio-rollout
  subsets:
  - name: canary
    labels:
      app: istio-rollout
  - name: stable
    labels:
      app: istio-rollout
