test/e2e/istio/split-by-destrule-subsets/istio-rollout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-rollout
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: istio-rollout
