test/e2e/istio/split-by-destrule-subsets/istio-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: istio-rollout
spec:
  revisionHistoryLimit: 2
  strategy:
    canary:
      steps:
      - setWeight: 10
      - pause: {duration: 10s}
      - setWeight: 20
      - pause: {duration: 10s}
      - setWeight: 30
      - pause: {duration: 10s}
      - setWeight: 40
      - pause: {duration: 10s}
      - setWeight: 50
      - pause: {duration: 10s}
      - setWeight: 60
      - pause: {duration: 10s}
      trafficRouting:
        istio:
          virtualService:
            name: istio-rollout-vsvc
            routes:
            - primary
          destinationRule:
            name: istio-rollout-destrule
            canarySubsetName: canary
            stableSubsetName: stable
  selector:
    matchLabels:
      app: istio-rollout
  template:
    metadata:
      labels:
        app: istio-rollout
        istio-injection: enabled
    spec:
      containers:
      - name: istio-rollout
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
